hard-gists/166499794efcdfde4d00/run.log
=== Docker Run Log for 166499794efcdfde4d00 ===
Started at: Mi 29. Okt 12:22:13 CET 2025

[2025-10-29 12:22:14] START: Running container for 166499794efcdfde4d00
[2025-10-29 12:22:14] SUCCESS: Container ad1e09d29643d0348f8f41868b240fdc6ff5cd8717d6f0954d5e0cd6526b769e started for 166499794efcdfde4d00
=== Container logs for 166499794efcdfde4d00 ===
  File "/snippet.py", line 42
    print url
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 166499794efcdfde4d00 ===
[2025-10-29 12:22:16] INFO: Container ad1e09d29643d0348f8f41868b240fdc6ff5cd8717d6f0954d5e0cd6526b769e has stopped
